# InvoiceGenerator

./: .dockerignore  Dockerfile  docker-compose.yml  invoice_template.html  invoicehtml_template.html  main.py  pyproject.toml
