[project]
name = "invoicegenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pdfkit>=1.0.0",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "reportlab>=4.4.6",
    "selenium>=4.39.0",
    "streamlit>=1.52.1",
    "webdriver-manager>=4.0.2",
    "xhtml2pdf>=0.2.17",
]
